# adcp

./: Cargo.toml  FEATURES.md  NEW_FEATURES_PLAN.md  README.md
config/: adcp.toml  orchestrator.toml  processor.toml
deployment/log/: adcp-orchestrator.2026-01-06  adcp-orchestrator.2026-01-07  adcp-processor.2026-01-06  adcp-processor.2026-01-07  adcp-recorder.2026-01-06  adcp-recorder.2026-01-07  adcp-simulator.2026-01-06  adcp-simulator.2026-01-07  e2e-test.2026-01-07
deployment/processed/: 2026-01-06.raw
deployment/tmp/: adcp_adcp-processor_hb  adcp_adcp-recorder_hb  adcp_adcp-simulator_hb  orchestrator.toml  processor.toml  recorder.toml  simulator.toml
src/: backup.rs  config.rs  lib.rs  logging.rs  main.rs  metrics.rs  parser.rs  persistence.rs  platform.rs  processing.rs  serial.rs  service.rs  simulator.rs  telemetry.rs
tests/: common.rs  debug_replay.rs  e2e.rs  linux_configuration.rs  pipeline.rs  run_orchestrator_test.ps1  run_orchestrator_test.sh  sample2.data  windows_virtual_service.rs
tests/fixtures/: corrupt.data  literal.data  small.data
