[package]
name = "adcp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Cross-platform ADCP acquisition service with operational resilience on Linux and Windows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/adcp"
readme = "README.md"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "io-util", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio-serial = "5.4"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"
libc = "0.2"
